# unicode-diagram

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  go.mod  go.sum  integration_test.go
.github/workflows/: release.yml
cmd/unid/: guide.go  main.go
docs/: README.ko.md
internal/canvas/: canvas_test.go  cell.go  grid.go
internal/dsl/: command.go  dsl_test.go  parser.go
internal/errors/: errors.go  errors_test.go
internal/object/: arrow.go  line.go  object_test.go  rect.go  text.go  types.go
internal/renderer/: engine.go  renderer_test.go
internal/width/: width.go  width_test.go
scripts/: release.sh
src/: cli.rs  error.rs  main.rs
src/canvas/: grid.rs
src/dsl/: command.rs  parser.rs
src/object/: arrow.rs  line.rs  mod.rs  rect.rs
src/renderer/: engine.rs
tests/: integration.rs
tests/fixtures/: content_with_newline_escape.dsl  multiline_rect_vertical_center.dsl  multiline_text_object.dsl  render_complex_architecture_diagram.dsl  render_complex_architecture_diagram.golden  text_align_center.dsl  text_align_center.golden  text_align_right.dsl  text_align_right.golden  text_multiline_indent.golden
