[package]
name = "unicode-diagram"
version = "0.1.2"
edition = "2024"
description = "CLI tool for rendering ASCII diagrams using Unicode box-drawing characters"
license = "MIT"
repository = "https://github.com/silee-tools/unicode-diagram"
homepage = "https://github.com/silee-tools/unicode-diagram"
authors = ["silee9019"]
keywords = ["unicode", "diagram", "box-drawing", "cli", "ascii"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "unid"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
unicode-width = { version = "0.2", features = ["cjk"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
